--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>WebbIII - nodejs</title>
 </head>
 <body>
-    <h1>Webbutveckling III - Node.js och gulp</h1>
-    <p>Hej</p>
+    <div id="navbar">
+                <a href="#home">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+    </div>
+
+    <section>
+    <div id="first">
+        <h1>Webbutveckling III - Moment 2</h1>
+        <h2>Node.js och Gulp</h2>
+        <p>Lorem ipsum</p>
+    </div>
+    
+    </section>
+
+    <footer>
+        <h5>Av: Malin Lind,  <a href="mailto:mali1710@student.miun.se">mali1710@student.miun.se</a></h5>
+    </footer>
 </body>
 </html>
